tests/ui/async-await/large_moves.option.stderr
error: moving 10024 bytes
  --> $DIR/large_moves.rs:19:14
   |
LL |     let z = (x, 42);
   |              ^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`
note: the lint level is defined here
  --> $DIR/large_moves.rs:1:9
   |
LL | #![deny(large_assignments)]
   |         ^^^^^^^^^^^^^^^^^

error: moving 10024 bytes
  --> $DIR/large_moves.rs:19:13
   |
LL |     let z = (x, 42);
   |             ^^^^^^^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`

error: moving 10024 bytes
  --> $DIR/large_moves.rs:21:13
   |
LL |     let a = z.0;
   |             ^^^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`

error: aborting due to 3 previous errors

